# video_undistort

./: CMakeLists.txt  README.md  opencv_video_calib.cpp  opencv_video_undistort.cpp  test_main.cpp  undistortVideo.h
calib_data/: camera_intrinsics.txt
